15.11.2001	nl.po <garetxe@users.sf.net>

	* nl.po: Added, contributed by Ime Smits and Reinout van Schowen.

14.11.2001	Killed parrot <garetxe@users.sf.net>

	* parrot: Removed from build tree.
	* configure.in: Added --with-gnome-prefix, overrides
	'gnome-config --prefix'
	* prepare_dist: Added optional prefix parameter.
	* channel_editor.c: Sync with glade file.
	* TODO: I think ttx search gui is clear enough, removing from
	here.

12.11.2001	Plugins properties conversion <garetxe@users.sf.net>

	* mpeg, lirc, screenshot: Converted properties to the new style.
	* plugins.c: Removed properties handling code, each plugin
	manages its properties now through the properties.h api.

6.11.2001	More properties work <garetxe@users.sf.net>

	* audio: Ported to the new properties code.
	* zconf: Added hook_while_alive
	* properties-handler: Dynamic ITV sensitivity.

5.11.2001	Properties almost done <garetxe@users.sf.net>

	* properties.c: Finished the shell code.
	* properties-handler.c: Added, it's the handler for Z's properties
	pages. Almost done except for audio backend properties code and
	dynamic ITV sensitivity.

4.11.2001	GUI sweetpill follow-up <mschimek@users.sf.net>

	* mpeg.c: Added rte.h version check.
	* Replaced occurences of "Elija un color" outside es.po
	  by "Choose a color".
	* zapping.glade: Moved a few channel dialog widgets.
	* channel_editor.c: Added index and video standard to
	  channel list, moved country, NLSed accelerator modifiers,
	  displays input name instead of country, channel and freq
	  when source is not tuner. Replaced unsafe snprintf(d, n, t)
	  by strncpy. Up and down button insensitive at end of list
	  and after selecting all rows (not always??). The respective
	  next row is moved back in sight on up or down. My spelling
	  gland asked for a change of the freq table names, proper
	  name uppercase most notably.

4.11.2001	New properties dialog <garetxe@users.sf.net>

	* properties.c: New Galeon style properties code. Still under