@@ -23,5 +23,7 @@ Thanks are due to the following people for helping with the program
 - Paweł Sakowski: Polish translation.
 - Henrik Isacsson: Swedish translation.
 - Mark Cooke: Lots of help with RPM build process under RH.
+- Ime Smits: Dutch translation.
+- Reinout van Schouwen: Dutch translation.
 
 And, of course, thanks to the people that sent bug reports and suggestions.
